tests/codegen/fail/union/trait_same_type_ugly.stderr
error[E0119]: conflicting implementations of trait `MutuallyExclusive` for type `std::string::String`
 --> fail/union/trait_same_type_ugly.rs:3:1
  |
3 | #[graphql_union]
  | ^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `std::string::String`
  |
  = note: this error originates in the macro `::juniper::sa::assert_type_ne_all` which comes from the expansion of the attribute macro `graphql_union` (in Nightly builds, run with -Z macro-backtrace for more info)
